feat: Spring AI 1.1.0 GA. Add Reciprocal Rank Fusion. Fix implementation of tests.